Added docs to others endpoints
